# crosslearn

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
crosslearn/: __init__.py  _devices.py  buffers.py  callbacks.py  loggers.py  registry.py
crosslearn/agents/: __init__.py  base.py  reinforce.py
crosslearn/envs/: __init__.py  atari.py  chronos_pca.py  utils.py
crosslearn/extractors/: __init__.py  base.py  chronos.py  cnn.py  flatten.py  pca.py
crosslearn/policies/: __init__.py  actor_critic.py
docs/: chronos.md  pca_workflows.md  reinforce.md
examples/: 01_cartpole-lunarlander_reinforce.ipynb  02_atari_reinforce_cnn.ipynb  03_atari_sb3_cnn.ipynb  04_gym-anytrading_reinforce_chronos2.ipynb  05_gym-anytrading_sb3_chronos2.ipynb  06_gym-anytrading_reinforce_chronos2_walkforward_pca.ipynb
tests/: conftest.py  test_atari_preprocessor.py  test_base_agent.py  test_chronos_extractor.py  test_chronos_parity.py  test_walkforward_pca.py
